--- a/sitestyles.css
+++ b/sitestyles.css
@@ -27,6 +27,25 @@ body {
     padding-left:10px;
     padding-right:10px;
 }
+.nolinebuttondl {
+    display: inline-block;
+    font-family: Roboto Mono;
+    background-color: white;
+    color: black;
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 5px;
+    text-underline-offset: 9.5px;
+}
+.nolinebuttondl:hover {
+    background-color: black;
+    color:white;
+    padding-left:15px;
+    padding-right:15px;
+}
 .container {
     display: flex;
 }
